refactor: continue java 8 compatibility migration
Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>